presence layout looking good

--- a/src/app/presence/presence.component.html
+++ b/src/app/presence/presence.component.html
@@ -1,13 +1,20 @@
 <div class="presence">
     <div class="row">
-        <div class="workspace-name" style="width: 170px;">
+        <div class="workspace-name" style="width: 160px;">
             Neopost Software Development
         </div>
-        <div>
-            ^
+        <div class="ddown">
+            <span class="fas fa-angle-down" aria-hidden="true"></span>
+        </div>
+        <div class="notifications">
+            <span class="far fa-bell" aria-hidden="true"></span>
+            <!-- <span class="fab fa-refresh fa-spin fa-github" aria-hidden="true"></span-->
         </div>
     </div>
     <div class="row">
+        <div class="presence-indicator">
+            <span class="fas fa-circle" aria-hidden="true"></span>
+        </div>
         <div class="user-full-name">
             Mike Fawcett
         </div>
