--- a/src/app/chat-menu/chat-menu.component.scss
+++ b/src/app/chat-menu/chat-menu.component.scss
@@ -33,6 +33,14 @@
     color: #888;
 }
 
+.chat-menu > .row > .chat-menu-icons > span.presence-away {
+    color: #888;
+}
+
+.chat-menu > .row > .chat-menu-icons > span.presence-active {
+    color: #319937;
+}
+
 .chat-menu > .row > .chat-menu-icons > p {
     font-size: 1.2rem;
     width: 15px;
