--- a/src/app/chat-window/chat-window.component.html
+++ b/src/app/chat-window/chat-window.component.html
@@ -26,6 +26,8 @@
 
     <div class="message-box-container">
         <div class="message-box">
+            <span class="actions">+</span>
+            <textarea rows="1" placeholder="Type here"></textarea>
         </div>
     </div>
 </div>
