--- a/src/app/chat-window/chat-window.component.scss
+++ b/src/app/chat-window/chat-window.component.scss
@@ -1,3 +1,31 @@
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+    border-radius: 10px;
+    margin-right: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: transparent; 
+    border-radius: 10px;
+    margin-right: 3px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888; 
+    border-radius: 10px;
+    margin-right: 3px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+    border-radius: 10px;
+    margin-right: 3px;
+}
+
 .chat-window {
     position: absolute;
     left: 280px;
@@ -23,21 +51,79 @@
 
 .message-thread {
     position: absolute;
-    bottom: 70px;
     top: 60px;
+    bottom: 70px;
+    overflow: auto;
+    width: 100%;
+}
+
+.message-thread > .message {
+    padding-left: 25px;
+    float: left;
+    width: 100%;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+.message-thread > .message:hover {
+    background: #f8f8f8;
 }
 
 .message-box-container {
     position: absolute;
     bottom: 0;
-    height: 70px;
+    //height: 70px;
     width: 100%;
+    margin-bottom: 60px;
+}
+
+.message-thread > .message > div > .sender {
+    font-weight: bold;
+    font-size: 0.9rem;
+    float: left;
+}
+
+.message-thread > .message > div > .time {
+    font-size: 0.77rem;
+    color: #666;
+    float: left;
+    margin-left: 6px;
+    margin-top: 2px;
+}
+
+.message-thread > .message > .message-body {
+    width: 100%;
+    float: left;
 }
 
 .message-box-container > .message-box {
     position: absolute; 
     left: 20px;
     right: 20px;
-    height: 50px;
-    border: 1px solid red;
+    //height: 43px;
+    border: 2px solid #666;
+    border-radius: 5px;
+}
+
+.message-box-container > .message-box > .actions {
+    border-right: 2px solid #666;
+    width: 40px;
+    font-size: 1.8rem;
+    color: #666;
+    float: left;
+    //height: 40px;
+    text-align: center;
+    line-height: 37px;
+}
+
+.message-box-container > .message-box > textarea {
+    width: 90%;
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    margin-left: 7px;
+    margin-top: 6px;
+    resize: none;
+    border: none;
+    outline: none;
 }
